# vector

./: BUILD.md  LICENSE.md  README.md  index.html  package.json  pnpm-lock.yaml  todo.txt  tsconfig.json  vite.config.ts
.github/: screenshot_light
src/: index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file.rs  lib.rs  main.rs
src/assets/styles/: index.css
src/components/: App.tsx  Background.tsx  Badge.tsx  Banner.tsx  ContextMenu.tsx  FileItem.tsx  FileList.tsx  Navbar.tsx  Sidebar.tsx  StatusBar.tsx  Trash.tsx  TrashList.tsx
src/hooks/: useFileSystem.ts  useInterval.ts
