[package]
name = "vector"
version = "0.0.1"
edition = "2021"

[lib]
name = "vector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6.0.0"
serde_json = "1"
walkdir = "2.5.0"
chrono = "0.4.40"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-os = "2"
